--- a/analysis/03_eating_disorder_descr.Rmd
+++ b/analysis/03_eating_disorder_descr.Rmd
@@ -29,40 +29,45 @@ load_inst_pkgs("tidyverse", "psych", "DescTools", "janitor", "knitr")
 ```
 
 # Sample periods
-- Pre-Covid from `r study_start` until `r covid_start`: `r pre_cov_dur` years
-- During Covid pandemic until `r study_end`: `r cov_dur` years
+- Pre-Covid from `r study_start` until `r covid_start`: `r pre_cov_dur` months (30-day periods)
+- During Covid pandemic until `r study_end`: `r cov_dur` months (30 day periods)
 
 
-# sample characteristics
-## number of unique diagnoses per case
+# descriptives
+
+## sample overview {.tabset .tabset-pills}
+### age range
+```{r}
+df_ed %>%
+  group_by(icd_f50) %>%
+  summarise(min_age = min_na(age_adm),
+            max_age = max_na(age_adm))
+```
+### number of cases per month (30 days) pre/during covid
+```{r}
+df_ed %>% 
+  group_by(covid_pan) %>%
+  summarise(n_cases = n_distinct(case_id),
+            n_patients = n_distinct(p_id)) %>%
+  mutate(months = c(pre_cov_dur, cov_dur)) %>%
+  adorn_totals() %>%
+  mutate(n_cases_month = n_cases/months,
+         n_patients_month = n_patients/months)
+```
+### number of unique diagnoses per case
 ```{r}
 df_diag %>%
   summarise(n = n_distinct(icd_code), .by = case_id) %>%
   ggplot(aes(x = n)) + geom_bar() + ggtitle("number of diagnoses per case")
 ```
 
-## number of cases per year pre/during covid
-```{r}
-df_ed %>% 
-  group_by(covid_pan) %>%
-  summarise(n_cases = n_distinct(case_id),
-            n_patients = n_distinct(p_id)) %>%
-  mutate(years = c(pre_cov_dur, cov_dur)) %>%
-  adorn_totals() %>%
-  mutate(n_cases_year = n_cases/years,
-         n_patients_year = n_patients/years)
-```
-
-## mean & sd by ED & Covid_pan
+## comparisons pre-pandemic vs during covid pandemic {.tabset .tabset-pills}
+### means & SDs by ED & Covid
 ```{r}
 summarise_mean_sd <- function(df) {
-  summarise(df, 
-            # across(where(~is.numeric(.x) | is.POSIXct(.x)), list(mean = ~mean(., na.rm = FALSE), sd = SD)), 
+  summarise(df,
             across(c(age_adm, length_stay_brutto, n_icd_code, n_icd_f, n_icd_other, re_adm_lag),
                    list(mean = mean_na, sd = sd_na)), 
-            # across(sex, list(mean = ~mean(as.numeric(.)-1, na.rm = TRUE), sd = ~SD(as.numeric(.)-1))),
-            # across(re_adm_soon, list(mean = ~mean(as.numeric(replace_na(., FALSE))),
-            #                          sd = ~SD(as.numeric(replace_na(., FALSE))))),
             n_cases = n())
 }
 
@@ -79,94 +84,76 @@ df_ed_stats <-
   arrange(icd_f50, covid_pan)
 df_ed_stats
 ```
-
-## age range
+### ED counts & proportions by Covid
 ```{r}
-df_ed %>%
-  group_by(icd_f50) %>%
-  summarise(min_age = min_na(age_adm),
-            max_age = max_na(age_adm))
+df_ed %>% gen_tabyl(icd_f50, covid_pan)
+df_ed %>% gen_tabyl(f50_type, covid_pan)
+```
+### psychotropic medication
+```{r}
+df_ed %>% filter(!is.na(psych_med)) %>% gen_tabyl(psych_med, covid_pan)
+df_ed %>% filter(!is.na(psych_med)) %>% gen_tabyl(psych_med, icd_f50, covid_pan)
 ```
 
-## ED counts & proportions by covid {.tabset .tabset-pills}
+## sex & ED {.tabset .tabset-pills}
+### sex counts & proportions by Covid
 ```{r}
-df_ed %>% gen_tabyl(covid_pan, icd_f50)
-df_ed %>% gen_tabyl(covid_pan, f50_type)
+df_ed %>% gen_tabyl(sex, covid_pan)
 ```
-
-### sex counts & proportions by ED
+### ED counts & proportions by sex
 ```{r}
-df_ed %>% gen_tabyl(covid_pan, sex)
 df_ed %>% gen_tabyl(icd_f50, sex)
 df_ed %>% gen_tabyl(f50_type, sex)
 ```
-
 ### ED + sex counts & proportions by covid
 ```{r}
 df_ed %>% gen_tabyl(icd_f50, sex, covid_pan)
 df_ed %>% gen_tabyl(f50_type, sex, covid_pan)
 ```
 
-### sex counts & proportions for lockdowns
+## co-occuring depression & anxiety {.tabset .tabset-pills}
+### DD
 ```{r}
-#TODO include above
-df_ed %>% gen_tabyl(covid_lockd_sev, icd_f50)
-df_ed %>% gen_tabyl(icd_f50, sex, covid_lockd_sev)
+df_ed %>% gen_tabyl(icd_dd, covid_pan)
+df_ed %>% gen_tabyl(icd_dd, icd_f50, covid_pan)
 ```
-
-### sex counts & proportions for lockdowns & ED subcategories
+### AD
 ```{r}
-df_ed %>% gen_tabyl(covid_lockd_sev, f50_type)
-df_ed %>% gen_tabyl(f50_type, sex, covid_lockd_sev)
+df_ed %>% gen_tabyl(icd_ad, covid_pan)
+df_ed %>% gen_tabyl(icd_ad, icd_f50, covid_pan)
 ```
-
-### by covid phase
+### F50+DD+AD
 ```{r}
-df_ed %>% gen_tabyl(covid_period_i, icd_f50)
-df_ed %>% gen_tabyl(covid_period_i, f50_type)
-df_ed %>% gen_tabyl(covid_period_i, icd_f50_dd_ad)
+df_ed %>% gen_tabyl(icd_f50_dd_ad, covid_pan)
+df_ed %>% gen_tabyl(icd_f50_dd_ad, covid_lockd_sev)
+df_ed %>% gen_tabyl(icd_f50_dd_ad, covid_period_i)
 ```
-
-### co-occuring depression & anxiety
-#### DD
-```{r}
-df_ed %>% gen_tabyl(covid_pan, icd_dd)
-df_ed %>% gen_tabyl(covid_pan, icd_dd, icd_f50)
-```
-#### AD
-```{r}
-df_ed %>% gen_tabyl(covid_pan, icd_ad)
-df_ed %>% gen_tabyl(covid_pan, icd_ad, icd_f50)
-```
-#### F50+DD+AD
-```{r}
-df_ed %>% gen_tabyl(covid_pan, icd_f50_dd_ad)
-df_ed %>% gen_tabyl(covid_lockd_sev, icd_f50_dd_ad)
-```
-#### LOS
+#### Length of stay
 ```{r}
 df_ed %>%
   group_by(covid_pan, icd_f50_dd_ad) %>%
   summarise(los_mean = mean_na(length_stay_brutto), los_sd = sd_na(length_stay_brutto))
 ```
 
-### psychotropic medication
+## Covid periods and school closures {.tabset .tabset-pills}
+### ED counts & proportions for school closure severities
 ```{r}
-df_ed %>% filter(!is.na(psych_med)) %>% gen_tabyl(covid_pan, psych_med)
-df_ed %>% filter(!is.na(psych_med)) %>% gen_tabyl(icd_f50, psych_med, covid_pan)
+df_ed %>% gen_tabyl(icd_f50, covid_lockd_sev)
+df_ed %>% gen_tabyl(f50_type, covid_lockd_sev)
+```
+### ED and comorbidity counts & proportions for Covid pandemic phase
+```{r}
+df_ed %>% gen_tabyl(icd_f50, covid_period_i)
+df_ed %>% gen_tabyl(f50_type, covid_period_i)
 ```
 
-
-## re-admissions / first presentations
-
-### within 6 months
+## re-admissions / first presentations {.tabset .tabset-pills}
+### re-admissions within 6 months
 ```{r}
-df_ed %>% gen_tabyl(icd_f50, re_adm_soon_nona, covid_pan)
+df_ed %>% gen_tabyl(re_adm_soon_nona, icd_f50, covid_pan)
 ```
-
-### 2-year baseline comparison
-
-#### v1: 2y baseline vs 2y covid, 2y lookback each
+### 2-year baseline comparison (2y baseline vs 2y covid, 2y lookback each)
+#### baseline
 ```{r}
 df_ed_re %>%
   filter(re_adm_period != "dur_covid") %>%
@@ -177,8 +164,10 @@ df_ed_re %>%
          re_adm_soon = re_adm_lag < re_adm_span) %>%
   ungroup() %>%
   filter(re_adm_period == "baseline") %>%
-  gen_tabyl(icd_f50, is_first_case)
-
+  gen_tabyl(is_first_case, icd_f50)
+```
+#### Covid pandemic
+```{r}
 df_ed_re %>%
   filter(re_adm_period != "pre") %>%
   group_by(p_id) %>%
@@ -188,22 +177,12 @@ df_ed_re %>%
          re_adm_soon = re_adm_lag < re_adm_span) %>%
   ungroup() %>%
   filter(re_adm_period == "dur_covid") %>%
-  gen_tabyl(icd_f50, is_first_case)
-```
-
-#### v2: 2y baseline vs 2y covid, no lookback #TODO
-```{r}
-# df_ed %>%
-#   group_by(p_id, covid_pan) %>%
-#   arrange(adm_date) %>%
-#   mutate(is_first_case_by_covid = case_id == first(case_id, na_rm = TRUE),
-#          re_adm_lag_by_covid = difftime(adm_date, coalesce(lag(dis_date), lag(adm_date)), units = "days"),
-#          re_adm_soon_by_covid = re_adm_lag_by_covid < re_adm_span) %>%
-#   ungroup()
+  gen_tabyl(is_first_case, icd_f50)
 ```
 
 
-# Lists for AN
+# Lists for Anorexia Nervosa (AN)
+
 ## AN non-psychiatric comorbidities
 ```{r}
 df_diag %>% 
@@ -211,7 +190,7 @@ df_diag %>%
   filter("Anorexie" %in% f50_type, icd_cat_l1 == "somatische Diag.", .by = case_id) %>% 
   use_series(icd_code) %>%
   unique() %>% as.character() %>% sort() %T>% 
-  write_lines(file.path(outdir, "AN_somatische_Komorbiditäten.txt"))
+  {if (do_save_objects) write_lines(., file.path(outdir, "AN_somatische_Komorbiditäten.txt"))}
 ```
 
 ## Medications in last week of stay
@@ -224,5 +203,5 @@ data_exp$medication %>%
   filter(in_last_week) %>% 
   use_series(med_nvl) %>% 
   unique() %>% as.character() %>% sort() %T>%
-  write_lines(file.path(outdir, "AN_Medikation_letzte_Woche.txt"))
+  {if (do_save_objects) write_lines(., file.path(outdir, "AN_Medikation_letzte_Woche.txt"))}
 ```
