--- a/analysis/04_eating_disorder_plots.Rmd
+++ b/analysis/04_eating_disorder_plots.Rmd
@@ -26,6 +26,7 @@ knitr::opts_chunk$set(warning = FALSE, echo = FALSE)
 do_source_data_creation <- FALSE
 source("code/eating_disorder_data_proc.R")
 load_inst_pkgs("tidyverse", "magrittr", "ggnewscale", "psych", "DescTools", "janitor", "knitr")
+do_save_objects <- FALSE
 ```
 
 ```{r plot settings}
@@ -54,8 +55,10 @@ ed_ggsave <- function(filename, path = plotdir, device = "svg", scale = 2, ...) 
 }
 ```
 
-## trend of ED diagnosis proportion
+## trend of ED diagnosis proportions
+
 ### full study period
+#### relative
 ```{r}
 # relative
 {df_ed_monthly_long %>% 
@@ -71,7 +74,9 @@ ed_ggsave <- function(filename, path = plotdir, device = "svg", scale = 2, ...) 
               hjust = "left", vjust = "top", nudge_x = 0.3, nudge_y = 0.5, check_overlap = TRUE) +
     theme_classic()} %T>% 
   {if (do_save_objects) ed_ggsave("ED_share_monthly_whole_period", plot = .)}
-
+```
+#### absolute
+```{r}
 # absolute
 {df_ed_monthly_long %>% 
     ggplot(aes(x = adm_year_month, y = abs, group = f50_type, fill = f50_type)) + 
@@ -88,36 +93,10 @@ ed_ggsave <- function(filename, path = plotdir, device = "svg", scale = 2, ...) 
   {if (do_save_objects) ed_ggsave("ED_absolute_monthly_whole_period", plot = .)}
 ```
 
-### lockdown periods within covid pandemic
+### covid pandemic with school closure periods
+#### relative
 ```{r}
 # relative
-## V1
-#TODO: this needs reformatting of df_schoolclosures to be facettable by covid_period_i
-df_ed_covid_weekly_long %>% 
-  ggplot(aes(x = adm_year_week, y = prop*100, group = f50_type)) + 
-  geom_area() +
-  # geom_col() +
-  geom_rect(data = df_schoolclosures,
-            mapping = aes(xmin = period_no_hol_start_year_week, xmax = period_no_hol_end_year_week,
-                          group = status_no_hol, colour = status_no_hol, fill = status_no_hol),
-            ymin = 0, ymax = 100, inherit.aes = FALSE) +
-  scale_colour_discrete(aesthetics = c("colour", "fill"),
-                        type = set_names(gu_colours$greys, NULL),
-                        name = "School closure periods", labels = c("1" = "partial", "2" = "full (incl. holidays)")) +
-  new_scale_fill() +
-  geom_area(aes(fill = f50_type)) +
-  scale_fill_discrete(type = gu_pref_colours, name = "ED Type", labels = c("AN", "BN", "oED")) +
-  guides(x = guide_axis(angle = -90)) + 
-  labs(title = "weekly share of cases with ED diagnosis during Covid pandemic", 
-       x = "Year.Week", y = "share of cases with ED diagnosis [%]") +
-  scale_x_discrete(
-    breaks = levels(df_ed_covid_weekly_long$adm_year_week)[seq(1, length(levels(df_ed_covid_weekly_long$adm_year_week)), 2)],
-    guide = guide_axis(angle = -90)) +
-  facet_grid(cols = vars(covid_period_i), scales = "free_x", space = "free_x") +
-  theme_classic() +
-  theme(panel.spacing.x = unit(0, "lines"))
-
-## V2
 {df_ed_covid_weekly_long %>% 
     ggplot(aes(x = adm_year_week, y = prop*100, group = f50_type)) + 
     # school closure rectangles
@@ -149,7 +128,9 @@ df_ed_covid_weekly_long %>%
          x = "Year.Week", y = "share of cases with ED diagnosis [%]") +
     theme_classic()} %T>% 
   {if (do_save_objects) ed_ggsave("ED_share_weekly_covid_period", plot = .)}
-
+```
+#### absolute
+```{r}
 # absolute
 {df_ed_covid_weekly_long %>% 
     ggplot(aes(x = adm_year_week, y = abs, group = f50_type)) + 
@@ -185,13 +166,14 @@ df_ed_covid_weekly_long %>%
 ```
 
 ### baseline-year comparison
+! WIP, not finalised
 ```{r}
-df_ed_monthly_baseline <- df_ed_monthly_long %>% 
-  # summarise data for baseline year
+df_ed_monthly_baseline <- df_ed_monthly %>% 
+  # summarise data for baseline year per month
   filter(covid_lockd_sev == "pre_covid") %>%
-  group_by(adm_month, f50_type) %>%
-  summarise(across(c(adm_year_month, adm_year, covid_lockd_sev, covid_period_i, ED_abs, ED_prop), min_na),
-            across(c(abs, prop), mean)) %>% 
+  summarise(across(c(adm_year_month, adm_year, covid_lockd_sev:covid_period_i), min_na),
+            across(n_cases:oED_prop, mean_na),
+            .by = adm_month) %>%
   # add covid periods
   bind_rows(df_ed_monthly %>% filter(covid_lockd_sev != "pre_covid"))
 
@@ -205,16 +187,15 @@ df_ed_monthly_baseline %>%
     # extract covid period year_months
     df_ed_monthly_baseline %>%
       filter(covid_lockd_sev != "pre_covid") %>%
-      select(c(adm_month, adm_year_month, f50_type)) %>%
+      select(c(adm_month, adm_year_month)) %>%
       # fill in values for corresponding months
       left_join(df_ed_monthly_baseline %>%
                   filter(covid_lockd_sev == "pre_covid") %>%
                   select(-adm_year_month),
-                by = c("adm_month", "f50_type"))) %>%
+                by = c("adm_month"))) %>%
   mutate(covid_pan = if_else(adm_year == 2016, "baseline", "dur_covid")) %>%
-  filter(f50_type == "AN") %>% 
   
-  ggplot(aes(x = adm_year_month, y = prop, group = covid_pan)) +
+  ggplot(aes(x = adm_year_month, y = AN_prop, group = covid_pan)) +
   geom_smooth(aes(colour = covid_pan, fill = covid_pan), span = 0.3) +
   scale_colour_discrete(aesthetics = c("colour", "fill"), type = gu_pref_colours) +
   guides(x = guide_axis(angle = -90)) + 
@@ -223,7 +204,8 @@ df_ed_monthly_baseline %>%
   theme_classic()
 ```
 
-### re-admissions within 6 months, monthly
+
+## re-admissions within 6 months, monthly
 ```{r}
 {df_ed %>%
     group_by(adm_year_month, icd_f50) %>%
@@ -243,7 +225,8 @@ df_ed_monthly_baseline %>%
   {if (do_save_objects) ed_ggsave("Readmission_share_monthly_whole_period", plot = .)}
 ```
 
-## share of first presentations
+
+## share of first presentations and re-admissions
 ```{r}
 {df_ed %>%
     filter(adm_date >= ymd("2018-03-01"), icd_f50 == "F50+") %>% 
@@ -270,36 +253,4 @@ df_ed_monthly_baseline %>%
     scale_y_continuous(limits = c(0, 100)) +
     theme_classic()} %T>% 
   {if (do_save_objects) ed_ggsave("First-presentation+readmisson_shares_in_ED", plot = .)}
-```
-
-
-### periods of cases per patient
-! WIP, not finalised
-```{r}
-# downsample F50- to match number of patients with ED. Proportion of F50- to F50+:
-prop_f50min_to_plus <- 1.5
-
-df_ed %>% 
-  group_by(p_id) %>%
-  mutate(n_cases = n()) %>%
-  filter(n_cases > 1) %>%
-  # filter(case_id != first(case_id)) %>% 
-  ungroup() %>% 
-  
-  {filter(., icd_f50 == "F50+" | p_id %in% 
-            sample(unique(.[.$icd_f50 == "F50-",]$p_id), 
-                   round(length(unique(.[.$icd_f50 == "F50+",]$p_id))*prop_f50min_to_plus)))} %>%
-  
-  ggplot(aes(x = adm_date, xend = dis_date,
-             y = fct_reorder(p_id, adm_date, first), yend = p_id,
-             group = case_id, colour = f50_type)) +
-  geom_segment() + 
-  scale_x_datetime(date_breaks = "3 months", date_labels = "%y.%m", date_minor_breaks = "1 month", 
-                   guide = guide_axis(angle = -90)) +
-  # scale_y_discrete() +
-  # scale_colour_viridis_d() + 
-  geom_vline(aes(xintercept = as.POSIXct(covid_start)), show.legend = FALSE) + 
-  theme(axis.text.y = element_blank(), axis.ticks.y = element_blank()) + 
-  labs(title = "periods of treatments per patient", 
-       x = "time", y = "patients", colour = "ED diag")
 ```
